# repa-lts

./: cleanbuild.sh  install.sh  make.experimental.sh  make.ropesver.sh  make.vanilla.sh  repa.cabal  repa.cabal.experimentalmp  repa.cabal.vanillamp  setChunks.sh
Data/: Rope  Rope.hs
Data/Array/: Repa.hs
Data/Array/Repa/Eval/: Chunked.hs  Gang.hs  GangMPar.hs  Reduction.hs  Selection.hs
Data/Array/Repa/Operators/: IndexSpace.hs  Mapping.hs  Reduction.hs  Selection.hs
Data/Array/Repa/Repr/: Cursored.hs  Delayed.hs  LazyTreeSplitting.hs
Data/Rope/: Rope.hs  Seq.hs
Data/Rope/Operators/: Mapping.hs  Reduction.hs  Zipping.hs
